--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,7 +1,6 @@
 body {
   padding: 50px;
   font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
-  background-color:#eee;
 }
 
 a {
@@ -15,6 +14,9 @@ table{
 
 .table td{
   vertical-align: middle;
+}
+.tableRow{
+  background-color:#fff;
 }
 
 .tableRow:hover{
