--- a/views/index.pug
+++ b/views/index.pug
@@ -9,7 +9,7 @@ block content
   div
     table(class='table table-stripped table-hover')
       tbody
-        each a in test2
+        each a in data
           tr(class='tableRow' data-href=a.url data-id=a.storyId)
             if a.title
               td
